spectec/test/interp/neg/undeclared-in-expression.imp
// Initializer reads a variable that was never declared.
int y = z
